--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -7,7 +7,21 @@
     {{- $image_array := (resources.Get "js/image-array.js" ) }}
     {{- $text_array := (resources.Get "js/text-array.js" )}}
     {{- $image_title_array := (resources.Get "js/titleimg-array.js" )}}
-    {{- $randomize_combined := slice $image_array $image_title_array $text_array $randomize | resources.Concat "js/random.js" | resources.Minify }}
+    {{- $frontpage_load := (resources.Get "js/frontpage-load.js" )}}
+    {{- $titleimg_load := (resources.Get "js/titleimg-load.js" )}}    
+    {{- $randomize_combined := slice $image_array $image_title_array $text_array $randomize $frontpage_load $titleimg_load | resources.Concat "js/random.js" | resources.Minify }}
+
+    {{- if not site.Params.assets.disableFingerprinting }}
+        {{- $randomize_combined := $randomize_combined | fingerprint }}
+        <script defer crossorigin="anonymous" src="{{ $randomize_combined.RelPermalink }}" integrity="{{ $randomize_combined.Data.Integrity }}"></script>
+    {{ else }}
+        <script defer crossorigin="anonymous" src="{{ $randomize_combined.RelPermalink }}"></script>
+    {{ end }}
+{{ else }}
+    {{- $randomize := (resources.Get "js/randomize.js" ) }}
+    {{- $image_title_array := (resources.Get "js/titleimg-array.js" )}}
+    {{- $titleimg_load := (resources.Get "js/titleimg-load.js" )}}    
+    {{- $randomize_combined := slice $image_title_array $randomize $titleimg_load | resources.Concat "js/normal_random.js" | resources.Minify }}
 
     {{- if not site.Params.assets.disableFingerprinting }}
         {{- $randomize_combined := $randomize_combined | fingerprint }}
