--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -45,6 +45,34 @@
     {{ end }}
 {{ end }}
 
+{{- if .Params.math }}
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/katex.min.css"
+        integrity="sha384-WcoG4HRXMzYzfCgiyfrySxx90XSl2rxY5mnVY5TwtWE6KLrArNKn0T/mOgNL0Mmi"
+        crossorigin="anonymous">
+    <script
+        defer
+        src="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/katex.min.js"
+        integrity="sha384-J+9dG2KMoiR9hqcFao0IBLwxt6zpcyN68IgwzsCSkbreXUjmNVRhPFTssqdSGjwQ"
+        crossorigin="anonymous">
+    </script>
+    <script
+        defer
+        src="https://cdn.jsdelivr.net/npm/katex@0.16.25/dist/contrib/auto-render.min.js"
+        integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh"
+        crossorigin="anonymous">
+    </script>
+    {{- $math_js := (resources.Get "js/math/math.js" ) }}  
+    {{- $math_combined := slice $math_js | resources.Concat "js/math.js" | resources.Minify }}
+    {{- if not site.Params.assets.disableFingerprinting }}
+        {{- $math_combined := $math_combined | fingerprint }}
+        <script defer crossorigin="anonymous" src="{{ $math_combined.RelPermalink }}" integrity="{{ $math_combined.Data.Integrity }}"></script>
+    {{ else }}
+        <script defer crossorigin="anonymous" src="{{ $math_combined.RelPermalink }}"></script>
+    {{ end }}
+{{ end }}
+
 {{- /* specials CSS stylesheet */}}
 {{- $special_stylesheet := (resources.Get "css/specials.css") | resources.Minify }}
 {{- if not site.Params.assets.disableFingerprinting }}
